--- a/copygram-backend/package.json
+++ b/copygram-backend/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^3.0.4",
     "mongoose": "^5.0.9",
     "morgan": "~1.9.0",
+    "multer": "^1.3.0",
     "serve-favicon": "~2.4.5"
   }
 }
