--- a/copygram-backend/package.json
+++ b/copygram-backend/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^5.0.9",
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "uuid": "^3.2.1"
   }
 }
