add upload to cloudinary via backend to securly store images

--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,5 @@ yarn-error.log*
 copygram-backend/dbpasswords.js
 copygram-backend/public/images/*
 copygram-backend/.env
+copygram-backend/config.js
 
