updated .gitingore to move api to new repository

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 
 # dependencies
 /node_modules
-/copygram-backend/node_modules
+
 
 # testing
 /coverage
@@ -22,5 +22,5 @@ yarn-debug.log*
 yarn-error.log*
 
 #keys
-copygram-backend/public/images/*
+/copygram-backend
 config.js
